
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u64 ;
struct TYPE_2__ {int tx_underun; int tx_aborted; int rx_multicast; int rx_broadcast; int rx_unicast; int tx_multi_collision; int tx_one_collision; int align_errors; int rx_missed; int rx_errors; int tx_errors; int rx_packets; int tx_packets; } ;
struct rtl8169_private {TYPE_1__ counters; } ;
struct net_device {int dummy; } ;
struct ethtool_stats {int dummy; } ;


 int ASSERT_RTNL () ;
 int le16_to_cpu (int ) ;
 int le32_to_cpu (int ) ;
 int le64_to_cpu (int ) ;
 struct rtl8169_private* netdev_priv (struct net_device*) ;
 int rtl8169_update_counters (struct net_device*) ;

__attribute__((used)) static void rtl8169_get_ethtool_stats(struct net_device *dev,
          struct ethtool_stats *stats, u64 *data)
{
 struct rtl8169_private *tp = netdev_priv(dev);

 ASSERT_RTNL();

 rtl8169_update_counters(dev);

 data[0] = le64_to_cpu(tp->counters.tx_packets);
 data[1] = le64_to_cpu(tp->counters.rx_packets);
 data[2] = le64_to_cpu(tp->counters.tx_errors);
 data[3] = le32_to_cpu(tp->counters.rx_errors);
 data[4] = le16_to_cpu(tp->counters.rx_missed);
 data[5] = le16_to_cpu(tp->counters.align_errors);
 data[6] = le32_to_cpu(tp->counters.tx_one_collision);
 data[7] = le32_to_cpu(tp->counters.tx_multi_collision);
 data[8] = le64_to_cpu(tp->counters.rx_unicast);
 data[9] = le64_to_cpu(tp->counters.rx_broadcast);
 data[10] = le32_to_cpu(tp->counters.rx_multicast);
 data[11] = le16_to_cpu(tp->counters.tx_aborted);
 data[12] = le16_to_cpu(tp->counters.tx_underun);
}
