; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_r8169.c_rtl8169_get_ethtool_stats.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_r8169.c_rtl8169_get_ethtool_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ethtool_stats = type { i32 }
%struct.rtl8169_private = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*, %struct.ethtool_stats*, i32*)* @rtl8169_get_ethtool_stats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtl8169_get_ethtool_stats(%struct.net_device* %0, %struct.ethtool_stats* %1, i32* %2) #0 {
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca %struct.ethtool_stats*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.rtl8169_private*, align 8
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store %struct.ethtool_stats* %1, %struct.ethtool_stats** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load %struct.net_device*, %struct.net_device** %4, align 8
  %9 = call %struct.rtl8169_private* @netdev_priv(%struct.net_device* %8)
  store %struct.rtl8169_private* %9, %struct.rtl8169_private** %7, align 8
  %10 = call i32 (...) @ASSERT_RTNL()
  %11 = load %struct.net_device*, %struct.net_device** %4, align 8
  %12 = call i32 @rtl8169_update_counters(%struct.net_device* %11)
  %13 = load %struct.rtl8169_private*, %struct.rtl8169_private** %7, align 8
  %14 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 12
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @le64_to_cpu(i32 %16)
  %18 = load i32*, i32** %6, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 0
  store i32 %17, i32* %19, align 4
  %20 = load %struct.rtl8169_private*, %struct.rtl8169_private** %7, align 8
  %21 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 11
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @le64_to_cpu(i32 %23)
  %25 = load i32*, i32** %6, align 8
  %26 = getelementptr inbounds i32, i32* %25, i64 1
  store i32 %24, i32* %26, align 4
  %27 = load %struct.rtl8169_private*, %struct.rtl8169_private** %7, align 8
  %28 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 10
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @le64_to_cpu(i32 %30)
  %32 = load i32*, i32** %6, align 8
  %33 = getelementptr inbounds i32, i32* %32, i64 2
  store i32 %31, i32* %33, align 4
  %34 = load %struct.rtl8169_private*, %struct.rtl8169_private** %7, align 8
  %35 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 9
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @le32_to_cpu(i32 %37)
  %39 = load i32*, i32** %6, align 8
  %40 = getelementptr inbounds i32, i32* %39, i64 3
  store i32 %38, i32* %40, align 4
  %41 = load %struct.rtl8169_private*, %struct.rtl8169_private** %7, align 8
  %42 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %41, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %42, i32 0, i32 8
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @le16_to_cpu(i32 %44)
  %46 = load i32*, i32** %6, align 8
  %47 = getelementptr inbounds i32, i32* %46, i64 4
  store i32 %45, i32* %47, align 4
  %48 = load %struct.rtl8169_private*, %struct.rtl8169_private** %7, align 8
  %49 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %48, i32 0, i32 0
  %50 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %49, i32 0, i32 7
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @le16_to_cpu(i32 %51)
  %53 = load i32*, i32** %6, align 8
  %54 = getelementptr inbounds i32, i32* %53, i64 5
  store i32 %52, i32* %54, align 4
  %55 = load %struct.rtl8169_private*, %struct.rtl8169_private** %7, align 8
  %56 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %55, i32 0, i32 0
  %57 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %56, i32 0, i32 6
  %58 = load i32, i32* %57, align 4
  %59 = call i32 @le32_to_cpu(i32 %58)
  %60 = load i32*, i32** %6, align 8
  %61 = getelementptr inbounds i32, i32* %60, i64 6
  store i32 %59, i32* %61, align 4
  %62 = load %struct.rtl8169_private*, %struct.rtl8169_private** %7, align 8
  %63 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %62, i32 0, i32 0
  %64 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %63, i32 0, i32 5
  %65 = load i32, i32* %64, align 4
  %66 = call i32 @le32_to_cpu(i32 %65)
  %67 = load i32*, i32** %6, align 8
  %68 = getelementptr inbounds i32, i32* %67, i64 7
  store i32 %66, i32* %68, align 4
  %69 = load %struct.rtl8169_private*, %struct.rtl8169_private** %7, align 8
  %70 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %69, i32 0, i32 0
  %71 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %70, i32 0, i32 4
  %72 = load i32, i32* %71, align 4
  %73 = call i32 @le64_to_cpu(i32 %72)
  %74 = load i32*, i32** %6, align 8
  %75 = getelementptr inbounds i32, i32* %74, i64 8
  store i32 %73, i32* %75, align 4
  %76 = load %struct.rtl8169_private*, %struct.rtl8169_private** %7, align 8
  %77 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %76, i32 0, i32 0
  %78 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %77, i32 0, i32 3
  %79 = load i32, i32* %78, align 4
  %80 = call i32 @le64_to_cpu(i32 %79)
  %81 = load i32*, i32** %6, align 8
  %82 = getelementptr inbounds i32, i32* %81, i64 9
  store i32 %80, i32* %82, align 4
  %83 = load %struct.rtl8169_private*, %struct.rtl8169_private** %7, align 8
  %84 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %83, i32 0, i32 0
  %85 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %84, i32 0, i32 2
  %86 = load i32, i32* %85, align 4
  %87 = call i32 @le32_to_cpu(i32 %86)
  %88 = load i32*, i32** %6, align 8
  %89 = getelementptr inbounds i32, i32* %88, i64 10
  store i32 %87, i32* %89, align 4
  %90 = load %struct.rtl8169_private*, %struct.rtl8169_private** %7, align 8
  %91 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %90, i32 0, i32 0
  %92 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %91, i32 0, i32 1
  %93 = load i32, i32* %92, align 4
  %94 = call i32 @le16_to_cpu(i32 %93)
  %95 = load i32*, i32** %6, align 8
  %96 = getelementptr inbounds i32, i32* %95, i64 11
  store i32 %94, i32* %96, align 4
  %97 = load %struct.rtl8169_private*, %struct.rtl8169_private** %7, align 8
  %98 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %97, i32 0, i32 0
  %99 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %98, i32 0, i32 0
  %100 = load i32, i32* %99, align 4
  %101 = call i32 @le16_to_cpu(i32 %100)
  %102 = load i32*, i32** %6, align 8
  %103 = getelementptr inbounds i32, i32* %102, i64 12
  store i32 %101, i32* %103, align 4
  ret void
}

declare dso_local %struct.rtl8169_private* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @ASSERT_RTNL(...) #1

declare dso_local i32 @rtl8169_update_counters(%struct.net_device*) #1

declare dso_local i32 @le64_to_cpu(i32) #1

declare dso_local i32 @le32_to_cpu(i32) #1

declare dso_local i32 @le16_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
